rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-uigradients__encoded.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: text_roundtrip
---
num_types: 1
num_instances: 3
chunks:
  - Inst:
      type_id: 0
      type_name: UIGradient
      object_format: 0
      referents:
        - 0
        - 1
        - 2
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Color
      prop_type: ColorSequence
      values:
        - keypoints:
            - time: 0
              color:
                - 1
                - 1
                - 1
            - time: 1
              color:
                - 1
                - 1
                - 1
        - keypoints:
            - time: 0
              color:
                - 1
                - 1
                - 1
            - time: 1
              color:
                - 1
                - 1
                - 1
        - keypoints:
            - time: 0
              color:
                - 1
                - 1
                - 1
            - time: 1
              color:
                - 1
                - 1
                - 1
  - Prop:
      type_id: 0
      prop_name: Enabled
      prop_type: Bool
      values:
        - true
        - true
        - true
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - UIGradient
        - UIGradient
        - UIGradient
  - Prop:
      type_id: 0
      prop_name: Offset
      prop_type: Vector2
      values:
        - - 0
          - 0
        - - 0
          - 0
        - - 0
          - 0
  - Prop:
      type_id: 0
      prop_name: Rotation
      prop_type: Float32
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Transparency
      prop_type: NumberSequence
      values:
        - keypoints:
            - time: 0
              value: 0.5
              envelope: 0
            - time: 0.2
              value: 0.75
              envelope: 0
            - time: 0.5
              value: 0
              envelope: 0
            - time: 0.6
              value: 0.8
              envelope: 0
            - time: 1
              value: 1
              envelope: 0
        - keypoints:
            - time: 0
              value: 0
              envelope: 0
            - time: 0.5
              value: 1
              envelope: 0
            - time: 1
              value: 0
              envelope: 0
        - keypoints:
            - time: 0
              value: 0
              envelope: 0
            - time: 1
              value: 0
              envelope: 0
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
        - - 1
          - -1
        - - 2
          - -1
  - End
